--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,61 @@
+@article{DBLP:journals/pvldb/AlbutiuKN12,
+  author       = {Martina{-}Cezara Albutiu and
+                  Alfons Kemper and
+                  Thomas Neumann},
+  title        = {Massively Parallel Sort-Merge Joins in Main Memory Multi-Core Database
+                  Systems},
+  journal      = {Proc. {VLDB} Endow.},
+  volume       = {5},
+  number       = {10},
+  pages        = {1064--1075},
+  year         = {2012},
+  url          = {http://vldb.org/pvldb/vol5/p1064\_martina-cezaraalbutiu\_vldb2012.pdf},
+  doi          = {10.14778/2336664.2336678},
+  timestamp    = {Sat, 25 Apr 2020 13:58:35 +0200},
+  biburl       = {https://dblp.org/rec/journals/pvldb/AlbutiuKN12.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/pvldb/BalkesenATO13,
+  author       = {Cagri Balkesen and
+                  Gustavo Alonso and
+                  Jens Teubner and
+                  M. Tamer {\"{O}}zsu},
+  title        = {Multi-Core, Main-Memory Joins: Sort vs. Hash Revisited},
+  journal      = {Proc. {VLDB} Endow.},
+  volume       = {7},
+  number       = {1},
+  pages        = {85--96},
+  year         = {2013},
+  url          = {http://www.vldb.org/pvldb/vol7/p85-balkesen.pdf},
+  doi          = {10.14778/2732219.2732227},
+  timestamp    = {Tue, 21 Mar 2023 21:05:57 +0100},
+  biburl       = {https://dblp.org/rec/journals/pvldb/BalkesenATO13.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/sigmod/LeisBK014,
+  author       = {Viktor Leis and
+                  Peter A. Boncz and
+                  Alfons Kemper and
+                  Thomas Neumann},
+  editor       = {Curtis E. Dyreson and
+                  Feifei Li and
+                  M. Tamer {\"{O}}zsu},
+  title        = {Morsel-driven parallelism: a NUMA-aware query evaluation framework
+                  for the many-core age},
+  booktitle    = {International Conference on Management of Data, {SIGMOD} 2014, Snowbird,
+                  UT, USA, June 22-27, 2014},
+  pages        = {743--754},
+  publisher    = {{ACM}},
+  year         = {2014},
+  url          = {https://doi.org/10.1145/2588555.2610507},
+  doi          = {10.1145/2588555.2610507},
+  timestamp    = {Tue, 06 Nov 2018 11:07:39 +0100},
+  biburl       = {https://dblp.org/rec/conf/sigmod/LeisBK014.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
 @inproceedings{DBLP:conf/spaa/DhulipalaBS17,
   author       = {Laxman Dhulipala and
                   Guy E. Blelloch and
