--- a/references.bib
+++ b/references.bib
@@ -75,3 +75,10 @@
   biburl       = {https://dblp.org/rec/conf/spaa/DhulipalaBS17.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@misc{parlayhash,
+  author={Guy Blelloch, Daniel Anderson, Zheqi Shen, Fernando Pelliccioni}
+  title={ParlayHash},
+  year={2024},
+  url={https://github.com/cmuparlay/parlayhash},
+}
