--- a/references.bib
+++ b/references.bib
@@ -77,8 +77,8 @@
 }
 
 @misc{parlayhash,
-  author={Guy Blelloch, Daniel Anderson, Zheqi Shen, Fernando Pelliccioni}
+  author={Guy Blelloch, Daniel Anderson, Zheqi Shen, Fernando Pelliccioni},
   title={ParlayHash},
   year={2024},
-  url={https://github.com/cmuparlay/parlayhash},
+  url={https://github.com/cmuparlay/parlayhash}
 }
